@@ -1,3 +1,4 @@
+21-may-2009 - adelikat - win32 - reverted fixedFontHeight to 13 instead of 14.  Gave the option of adjusting the height by modifying RowHeightBorder in the .cfg file
 21-may-2009 - adelikat - win32 - made fullscreen toggle (Alt+Enter) remappable
 15-may-2009 - shinydoofy - sdl - added --subtitles
 10-may-2009 - shinydoofy - sdl - fixed Four Score movie playback
